# CrossWindow

./: CMakeLists.txt  LICENSE  README.md
cmake/: CrossWindowConfig.cmake.in
examples/: CMakeLists.txt  window_control.cpp  window_list.cpp
include/: CrossWindow.h
src/: WindowManager.cpp  WindowManagerImpl.h
src/platform/: platform_detect.h
src/platform/linux/: WindowManagerLinux.cpp  WindowManagerLinux.h
src/platform/macos/: WindowManagerMacOS.h  WindowManagerMacOS.mm
src/platform/stub/: WindowManagerStub.h
src/platform/windows/: WindowManagerWindows.cpp  WindowManagerWindows.h
test/: CMakeLists.txt  test_crosswindow.cpp
